Refactor all angular files