@@ -5,21 +5,22 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.Authentication;
+import pl.dolien.shop.pagination.RestPage;
 import pl.dolien.shop.summaryMetrics.SummaryMetricsService;
 import pl.dolien.shop.feedback.dto.FeedbackDTO;
 import pl.dolien.shop.feedback.dto.FeedbackRequestDTO;
 import pl.dolien.shop.feedback.dto.FeedbackResponseDTO;
 import pl.dolien.shop.pagination.PageableBuilder;
 import pl.dolien.shop.pagination.PaginationParams;
-import pl.dolien.shop.user.User;
 import pl.dolien.shop.user.UserService;
-import pl.dolien.shop.user.dto.UserDTO;
+import pl.dolien.shop.user.dto.UserWithRoleDTO;
 
-import java.util.Collections;
 import java.util.List;
 
+import static java.time.LocalDate.parse;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -30,6 +31,9 @@ class FeedbackServiceTest {
 
     @Mock
     private FeedbackRepository feedbackRepository;
+
+    @Mock
+    private FeedbackMapper feedbackMapper;
 
     @Mock
     private UserService userService;
@@ -43,11 +47,11 @@ class FeedbackServiceTest {
     @Mock
     private Authentication authentication;
 
-    private User testUser;
-    private UserDTO testUserDTO;
+    private UserWithRoleDTO testUserDTO;
     private Feedback testFeedback;
     private FeedbackDTO testFeedbackDTO;
     private FeedbackRequestDTO testFeedbackRequestDTO;
+    private FeedbackResponseDTO testFeedbackResponseDTO;
     private PaginationParams testPaginationParams;
 
     @BeforeEach
@@ -72,25 +76,30 @@ class FeedbackServiceTest {
     void shouldGetFeedbacksByProduct() {
         mockDependenciesForGetFeedbacksByProduct();
 
-        List<FeedbackResponseDTO> result = feedbackService.getFeedbacksByProduct(1L, testPaginationParams, authentication);
+        Page<FeedbackResponseDTO> result = feedbackService.getFeedbacksByProduct(1L, testPaginationParams, authentication);
 
-        assertEquals(1, result.size());
-        assertEquals(testFeedback.getCreatedBy(), result.get(0).getCreatedBy());
+        assertEquals(1, result.getContent().size());
+        assertEquals(testFeedback.getCreatedBy(), result.getContent().get(0).getCreatedBy().getId());
 
         verifyInteractionsForGetFeedbacksByProduct();
     }
 
     private void initializeTestData() {
-        testUser = User.builder()
-                .id(4)
-                .build();
-
-        testUserDTO = UserDTO.builder()
+        testUserDTO = UserWithRoleDTO.builder()
                 .id(1)
+                .firstname("John")
+                .lastname("Doe")
+                .email("test@example")
+                .dateOfBirth(parse("2020-01-01"))
+                .accountLocked(false)
+                .enabled(true)
+                .createdDate(parse("2020-01-01").atStartOfDay())
+                .lastModifiedDate(parse("2020-01-01").atStartOfDay())
                 .build();
 
         testFeedback = Feedback.builder()
                 .id(1)
+                .createdBy(1)
                 .build();
 
         testFeedbackDTO = FeedbackDTO.builder()
@@ -103,6 +112,10 @@ class FeedbackServiceTest {
                 .productId(1L)
                 .build();
 
+        testFeedbackResponseDTO = FeedbackResponseDTO.builder()
+                .createdBy(testUserDTO)
+                .build();
+
         testPaginationParams = PaginationParams.builder()
                 .page(1)
                 .size(10)
@@ -110,25 +123,34 @@ class FeedbackServiceTest {
     }
 
     private void mockDependenciesForSaveFeedback() {
-        when(userService.getUserDTOByAuth(authentication)).thenReturn(testUserDTO);
+        when(userService.getUserByAuth(authentication)).thenReturn(testUserDTO);
         when(feedbackRepository.save(any(Feedback.class))).thenReturn(testFeedback);
     }
 
     private void verifyInteractionsForSaveFeedback() {
-        verify(userService, times(1)).getUserDTOByAuth(authentication);
+        verify(userService, times(1)).getUserByAuth(authentication);
         verify(feedbackRepository, times(1)).save(any(Feedback.class));
     }
 
     private void mockDependenciesForGetFeedbacksByProduct() {
-        when(authentication.getPrincipal()).thenReturn(testUser);
+        when(userService.getUserByAuth(any(Authentication.class))).thenReturn(testUserDTO);
+        when(feedbackMapper.toFeedbackResponses(any(Page.class), anyInt())).thenReturn(buildRestPageByFeedbackResponseDTO(List.of(testFeedbackResponseDTO)));
         when(pageableBuilder.buildPageable(testPaginationParams)).thenReturn(mock(Pageable.class));
         when(feedbackRepository.findAllByProductId(anyLong(), any(Pageable.class)))
-                .thenReturn(Collections.singletonList(testFeedback));
+                .thenReturn(buildRestPageByFeedback(List.of(testFeedback)));
     }
 
     private void verifyInteractionsForGetFeedbacksByProduct() {
-        verify(authentication, times(1)).getPrincipal();
+        verify(userService, times(1)).getUserByAuth(any(Authentication.class));
         verify(pageableBuilder, times(1)).buildPageable(testPaginationParams);
         verify(feedbackRepository, times(1)).findAllByProductId(anyLong(), any(Pageable.class));
+    }
+
+    private Page<Feedback> buildRestPageByFeedback(List<Feedback> content) {
+        return new RestPage<>(content, 1, 1, 1);
+    }
+
+    private Page<FeedbackResponseDTO> buildRestPageByFeedbackResponseDTO(List<FeedbackResponseDTO> testFeedbackResponseDTO) {
+        return new RestPage<>(testFeedbackResponseDTO, 1, 1, 1);
     }
 }
